<resources>
    <string name="app_name">Vms</string>
    <string name="login">Login Details</string>
    <string name="db_created">inserted</string>
    <string name="licence_key">Please Enter The key</string>
    <string name="save">Continue</string>
    <string name="license_screen">License Key</string>
    <string name="url_key">Please Enter the Company Url</string>
    <string name="url_screen">Company Url</string>
    <string name="text_ok">Ok</string>
    <string name="activity_mandatory_fields_missing">Mandatory Fields Missing</string>
    <string name="license_activity__key_error">Invalid License Key.</string>
    <string name="chk_allow_captured_visitor_image">Allow Capture Visitor Image</string>
    <string name="chk_allow_metting_room">Allow meeting room</string>
    <string name="chk_allow_print">Allow Print</string>
    <string name="sms_api">Sms API</string>
    <string name="email_smtp">Email SMTP</string>
    <string name="theme">Theme</string>
    <string name="chk_allow_bio_search">Allow Bio Search</string>
    <string name="chk_allow_escot">Allow Escot</string>
    <string name="company_setting">Company Settings</string>
    <string name="please_check_internet">Please check Internet connection</string>
    <string name="token_id">token id is null</string>
    <string name="token_id_or_vrf">please check token id and vrf id</string>
    <string name="welcome_label">welcome</string>
    <string name="permissions_request">Permissions required for the app to function.</string>
    
    <string name="vms_screen">VMS</string>
    <string name="get_details">UPDATE DETAILS</string>
    <string name="settings_screen">Company Location Settings</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="discard_title">Are you sure Do you want to Quit this Screen ?</string>
    <string name="id">Id</string>
    <string name="logo">Logo Url</string>
    <string name="allowCapture">Allow Capture Images</string>
    <string name="name">Name</string>
    <string name="invalid_token">Please enter a valid token</string>
    <string name="no_rows">no row</string>
    <string name="something_wrong">something went wrong</string>
    <string name="upload_pic">Upload Picture</string>
    <string name="scan_qr">Scan Qr Code</string>
    <string name="scan_msg_default_status">Scan the Qr Code if you are not able to scan Go back and Enter the Code Manually</string>
    <string name="enter_qr_code">Enter Qr Code</string>
    <string name="Qr_screen">Qr ScanActivity</string>
    <string name="enter_mob">Enter Mobile Number\nOr VRF ID</string>
    <string name="enter_vcid">Enter Vcid</string>
    <string name="employee">Employee</string>
    <string name="department">Department</string>
    <string name="submit">Submit</string>
    <string name="scan_your_qr_code">Welcome to Tero Tech Visitor Managment System Please Scan Your Qr Code</string>
    <string name="create_vrf">Create VRF</string>
    <string name="or">Or</string>
    <string name="enter_your_Vrf_no">Enter Your VRF Number or Mobile Number</string>
    <string name="enter_Vrf_no">Enter VRF</string>
    <string name="company_name">Company Name</string>
    <string name="location">Location</string>
    <string name="primary_visitor">Name</string>
    <string name="to_meet">To Meet</string>
    <string name="mobile_num">Phone Number</string>
    <string name="purpose">Purpose</string>
    <string name="primary_visitor_id">Visitor Scan ID</string>
    <string name="scan_id">Scan ID</string>
    <string name="input_area">Enter Six digit Otp Sent to:- </string>
    <string name="cancel">Cancel</string>
    <string name="save_area">Submit</string>
    <string name="enter_otp">Enter otp</string>
    <string name="enter_password_wrong">Password is incorrect please enter valid password</string>
    <string name="enter_pass">Enter the valid password</string>
    <string name="view_visitor">View Visitors</string>
    <string name="reset">Reset</string>
    <string name="thanks">Thank You for Your information.\n Your request is submitted for approval..</string>
    <string name="ok">Ok</string>
    <string name="another_visitor">Additional Visitor</string>
    <string name="cancelled">Cancelled</string>
    <string name="please_scan_qr">Please Scan Qr Code or enter the mobile number</string>
    <string name="additional_visitor_id">Secondary Visitor Id</string>
    <string name="email_id">Email Address</string>
    <string name="office">Official</string>
    <string name="personal">Personal</string>
    <string name="department_text">Department</string>
    <string name="employee_text">Employee</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="pin_code">PIN Code</string>
    <string name="duration_in_hours">Duration in hours</string>
    <string name="pic">Image is Mandatory to procced</string>
    <string name="front_camera">Front Camera Not Detected</string>
    <string name="scanned">Scanned</string>
    <string name="invalid_theme">Theme value is Empty</string>
    <string name="image_upload_error">Image upload error</string>
    <string name="employee_email_id">Employee Email Address/Phone Number</string>
    <string name="otp_mismatch">Please Enter Valid Otp</string>
    <string name="select_radio_button">For proceed Select the Radio Button</string>
    <string name="all_visitors">ALL VISITORS</string>
    <string name="visitor_id">Visitor ID</string>
    <string name="resend">Resend</string>
    <string name="okay">Okay!</string>
    <string name="num_add_visitor">Add Number of Visitors</string>
    <string name="add_visitor">Add Visitors</string>
    <string name="verify">Verify</string>
    <string name="set_password">Enter Valid Password</string>
    <string name="re_set_password">Re Enter Password</string>
    <string name="set_min_password">Please enter Your Password more than four Digit</string>
    <string name="phone_mandatory">Phone Number is Mandatory</string>
    <string name="visiting_for">Type of Visit</string>
    <string name="scan_your_id">Scan Your ID Proof</string>
    <string name="cancel_otp">Otp Send To your Device Do you want To Cancelled ?</string>
    <string name="resend_otp">Otp is send to your Register Number</string>
    <string name="are_you_sure_you_want_to_resend_otp">Are You Sure You Want To Resend Otp? ?</string>
    <string name="are_you_sure_you_want_to_cancel">Are You Sure You want to cancel the otp?</string>
    <string name="please_select_your_scan_image">For proceed Fill all Details </string>
    <string name="okay_prv">OK</string>
    <string name="set_pass">Please Set your password</string>
    <string name="reset_pass">Please Reset your password</string>
    <string name="invalid_num">Invalid Number</string>
    <string name="invalid_qr">Invalid Scan Id please Try Again</string>
    <string name="updated_datetime">Last Update DateTime</string>
    <string name="please_upload_image">Image upload is Mandatory</string>
    <string name="enter_visitors">Number of Secondary Visitors</string>
    <string name="otp_not">Otp Not Recived</string>
    <string name="pasword_mismatch">ReEnter password mismatch</string>
    <string name="vrf_id">Vrf Id Null</string>
    <string name="enter_otp_details">Enter Otp Sent to:</string>
    <string name="purpose_duration">please select type of purpose</string>
    <string name="check_mob_vrfid">Please Check your mobile number and Vrfid</string>
    <string name="select_duration">Please Select the Mandatory Field</string>
    <string name="select_department">Please Select type of Department</string>
    <string name="valid_email_phone">Please Enter Valid Phone Number or Email Address</string>
    <string name="please_check">Please check the vrf type</string>
    <string name="upload_pic_err">Error in upload</string>
    <string name="pending">Implementation pending</string>

    <string name="address">Address</string>
    <string name="emp_email_id">Employee Email/Phone</string>
    <string name="hello_world">Hello Kiosk Mode!</string>
    <string name="hiddenBreakoutButton">Hidden Exit Button!</string>
    <string name="fill_vrf_information">Visitor Registration From</string>
    <string name="please_check_in">Please Check-in</string>
    <string name="pre_registration">Pre-Registered Visitors</string>
    <string name="register">Register</string>
    <string name="walk_in_visitor">Walk-in Visitors</string>
    <string name="powered_by_vms">Powerd by TereoTech</string>
    <string name="enter_mob_num">Enter Mobile Number</string>
    <string name="are_you_sure_you_want_to_continue_without_otp">Are You Sure you want to continue without otp?</string>
    <string name="welcome_screen">please_check_in</string>
    <string name="enter_mob_vrf">Enter Register Mobile Number or Vrf-Id</string>
    <string name="turn_on_flashlight">Back</string>

</resources>
