<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context="com.telloquent.vms.activities.visitor.VisitorListActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar_view"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="@dimen/i1_10dp_margin"
            android:padding="@dimen/i1_10dp_margin"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                style="@style/i1_text_view_visitor_list"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/primary_visitor" />
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                style="@style/i1_text_view_visitor_list"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/company_name" />
            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                style="@style/i1_text_view_visitor_list"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/mobile_num" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                style="@style/i1_text_view_visitor_list"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/email_id" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dividerColor"/>

            <android.support.v7.widget.RecyclerView
                android:layout_margin="@dimen/i1_10dp_margin"
                android:id="@+id/visitor_list_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="horizontal">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

</LinearLayout>
