<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@color/vrf_background"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/i1_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/primaryTextBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/i1_20dp_margin"
                    android:gravity="center"
                    android:text="@string/num_add_visitor" />

                <EditText
                    android:id="@+id/add_secondary_visitors"
                    style="@style/custom_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/i1_30dp_margin"
                    android:layout_marginRight="@dimen/i1_30dp_margin"
                    android:gravity="center"
                    android:hint="@string/enter_visitors"
                    android:inputType="number"
                    android:maxLength="2"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fragment_addarea_detectlocation_button"
                    android:layout_margin="@dimen/i1_20dp_margin"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/cancel_button_for_secondary_visitors"
                        style="@style/new_i1_register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/i1_5dp_margin"
                        android:layout_weight="1"
                        android:text="@string/cancel"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/submit_button_for_secondary_visitors"
                        style="@style/new_i1_register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/i1_5dp_margin"
                        android:layout_weight="1"
                        android:text="@string/submit"
                        android:textColor="@color/white" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>
